# Turbo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  imgui.ini
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
assets/: shader.frag  shader.vert  shader2.frag  to_load.txt
engine/: CMakeLists.txt
engine/include/Turbo/Core/: Application.h  Callback.h  Log.h  Settings.h
engine/include/Turbo/Core/Application/: Application.h  ApplicationModeHandler.h  CompileTimeSettings.h  EditorApplicationModeHandler.h
engine/include/Turbo/Core/Input/: InputContext.h  InputHandle.h  InputManager.h  Keyboard.h  Mouse.h
engine/include/Turbo/Core/Layers/: ImGuiLayer.h  Layer.h
engine/include/Turbo/Core/Renderer/: BufferLayout.h  RenderingApi.h
engine/include/Turbo/Core/Renderer/Abstraction/: FrameBuffer.h  IndexBuffer.h  RenderCommand.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
engine/include/Turbo/Core/Renderer/OpenGL/: OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLIndexBuffer.h  OpenGLRenderCommand.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
engine/include/Turbo/Core/Scene/: Entity.h  GlTFLoader.h  Scene.h
engine/include/Turbo/Core/Scene/Components/: MeshComponent.h  TransformComponent.h
engine/include/Turbo/Core/States/: State.h
engine/include/Turbo/Core/Window/: OpenGLWindow.h  Window.h
engine/libs/glad/: CMakeLists.txt
engine/libs/glad/include/glad/: glad.h
engine/libs/glad/src/: glad.c
engine/libs/imgui/: CMakeLists.txt
engine/src/Core/: Application.cpp  Log.cpp
engine/src/Core/Application/: Application.cpp  EditorApplicationModeHandler.cpp
engine/src/Core/Input/: InputContext.cpp  InputHandle.cpp  InputManager.cpp
engine/src/Core/Layers/: ImGuiLayer.cpp  Layer.cpp
engine/src/Core/Renderer/: BufferLayout.cpp
engine/src/Core/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLRenderCommand.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
engine/src/Core/Scene/: Entity.cpp  Scene.cpp
engine/src/Core/States/: State.cpp
engine/src/Core/Window/: OpenGLWindow.cpp
include/: Camera.h
include/turbo/Turbo/: Test.h
include/turbo/Turbo/Core/: Application.h  Callable.h  Callback.h  Init.h  Log.h  Window.h
include/turbo/Turbo/Core/Input/: InputContext.h  InputContext.inl  InputHandle.h  InputManager.h  Keyboard.h  Mouse.h
include/turbo/Turbo/Core/Layers/: ImGuiLayer.h  Layer.h
include/turbo/Turbo/Core/Renderer/: BufferLayout.h  GraphicsContext.h  Renderer.h  RenderingApi.h  imgui_impl_opengl3.h
include/turbo/Turbo/Core/Renderer/Abstraction/: IndexBuffer.h  Shader.h  VertexBuffer.h
include/turbo/Turbo/Core/Renderer/OpenGL/: OpenGLIndexBuffer.h  OpenGLShader.h  OpenGLVertexBuffer.h  imgui_impl_opengl3.h
include/turbo/Turbo/Core/State/: Layer.h  State.h
include/turbo/Turbo/Core/States/: State.h
include/turbo/Turbo/Core/Window/: OpenGLWindow.h  Window.h
libs/fmt/: Makefile
libs/glad/: Makefile
libs/glad/src/: glad.c
libs/imgui/: Makefile
libs/imgui/src/: imgui_impl_opengl3.cpp
libs/spdlog/: Makefile
src/: main.cpp
src/Game/: main.cpp
src/Turbo/: Test.cpp
src/Turbo/Core/: Application.cpp  Log.cpp  Window.cpp
src/Turbo/Core/Input/: InputContext.cpp  InputHandle.cpp  InputManager.cpp
src/Turbo/Core/Layers/: ImGuiLayer.cpp
src/Turbo/Core/Renderer/: BufferLayout.cpp  GraphicsContext.cpp  OpenGLContext.cpp  Renderer.cpp  imgui_demo.cpp  imgui_impl_opengl3.cpp
src/Turbo/Core/Renderer/Abstraction/: IndexBuffer.cpp  VertexBuffer.cpp
src/Turbo/Core/Renderer/OpenGL/: OpenGLIndexBuffer.cpp  OpenGLShader.cpp  OpenGLVertexBuffer.cpp
src/Turbo/Core/State/: Layer.cpp  State.cpp
src/Turbo/Core/States/: State.cpp
src/Turbo/Core/Window/: OpenGLWindow.cpp  Window.cpp
